gitops/apps/wosp-collection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wosp-collection
  labels:
    app: wosp-collection
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: wosp-collection
